US5740 - Created the Delete Transfers Feature.  In order to complete the feature the classes CustomOptionsMenu and TransferDeletionType were both created.  Delete Transfers supports both the deletion of one time transfers and recurring.
Test Cases:
- Validated the delete recurring transfer menu appears.
- Validated the transfer deleted message appears.
- Validated Delete Transfers Recurring Next in Series functioned.
- Validated Delete Transfers Recurring Entire Series Functioned.

--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -154,13 +154,21 @@
         android:text="@string/activity_table_name"
         android:textStyle="bold" />
 
+   	<com.discover.mobile.bank.ui.widgets.StatusMessageView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/table_title"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginRight="@dimen/forms_inner_padding" />
+    
     <com.discover.mobile.bank.ui.table.TableTitles
         android:id="@+id/table_titles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/table_title"
+        android:layout_below="@+id/status"
         android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:layout_marginTop="@dimen/between_related_elements_padding" />
 
