--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -31,6 +31,8 @@
     <string name="cancelled_payment">Cancelled Payment</string>
     <string name="edit_payment">Edit Payment</string>
     <string name="delete_payment">Delete Payment</string>
+    <string name="delete_transfer">Delete Transfer</string>
+    <string name="see_options">See Options</string>
     <string name="non_primary_joint_account_warning">
         This payment has been scheduled by %1$s. It can only be edited/deleted by %1$s.
     </string>
