--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -31,6 +31,9 @@
     <string name="activity_go_to_top">Back to Top</string>
     <string name="table_pull_load_more">Pull to load more&#8230;</string>
     <string name="table_release_to_update">Release to update&#8230;</string>
+    <string name="account_activity_scheduled_transfer_deleted">Scheduled Transfer Deleted</string>
+    <string name="delete_next_transfer_in_series_content_description">Delete the next transfer in the series</string>
+    <string name="delete_entire_transfer_series_content_description">Delete the entire series of transfers</string>
 
     <!-- Account - Skipped SSO Signin -->
     <string name="skipsso_modal_title">We\'re Sorry</string>
