US8680 - Fixed the text for Pay Bills enrollment US8719 - Fixed the text for Deposit Check enrollment.

--- a/Discover-Bank-Phone/res/values/strings_bank_terms.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_terms.xml
@@ -6,8 +6,8 @@
     <string name="bank_terms_privacy_statement">Mobile Privacy Statement</string>
     <string name="bank_terms_of_use">Mobile Terms of Use</string>
     <string name="bank_terms_bill_pay">Bill Pay Terms of Use</string>
-    <string name="bank_deposit_check_title">Deposit a Check\nTerms of Use</string>
-    <string name="bank_deposit_check">Deposit a Check Terms of Use</string>
+    <string name="bank_deposit_check_title">Mobile Check Deposit\n Terms of Use</string>
+    <string name="bank_deposit_check">Mobile Check Deposit Terms of Use</string>
     <string name="bank_divider">|</string>
     <string name="bank_provide_feedback">Provide Feedback</string>
     <string name="bank_terms_google">Google Terms of Use</string>
