--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -20,6 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/gradient_line"
         android:src="@drawable/back_arrow_white_icon" />
+    
+    <ImageView
+        android:id="@+id/navigation_back_x_button"
+        style="@style/orange_action_bar_buttons"
+        android:background="@drawable/provide_feedback_x_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/gradient_line" />
 
     <TextView
         android:id="@+id/title_view"
