--- a/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
+++ b/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:id="@+id/scrollView1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -183,19 +184,15 @@
             android:layout_marginTop="@dimen/orange_button_margin_top"
             android:onClick="submitSecurityInfo"
             android:text="@string/continue_text" />
-
-        <!-- This has been made gone for the time being as it is not requred for this page  -->
-        <TextView
-            android:id="@+id/provide_feedback_button"
-            style="@style/bank_blue_hyperlink_small"
-            android:layout_width="wrap_content"
+        
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/account_security_continue_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/orange_button_margin_top"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/feedback_text"
-            android:visibility="gone" />
+            style="@style/bank_layout_footer_style"
+            custom:footerType="1"/>
+        
     </RelativeLayout>
 
 </ScrollView>
