--- a/Discover-Launch/assets/www/card/css/edo-R13.css
+++ b/Discover-Launch/assets/www/card/css/edo-R13.css
@@ -659,16 +659,6 @@ background:none;font-size:14px;color:#50555a}
 	margin-top: 10px;
 	width:33%;
 }
-<<<<<<< HEAD
-#edoHistory-pg .wraper .historyList	.listLi .ui-block-b {
-	display: inline-block;
-	width:36%;
-}
-#edoHistory-pg .wraper .historyList	.listLi .ui-block-c {
-	display: inline-block;
-	width:30%;
-	float:right;
-=======
 #edoHistory-pg .wraper .historyList        .listLi .ui-block-b {
                 display: inline-block;
                 width:36%;
@@ -677,12 +667,11 @@ background:none;font-size:14px;color:#50555a}
                 display: inline-block;
                 width:30%;
                 float:right;
->>>>>>> 86481db... US7225 20130521 Card Bank Code Merge
 }
 
 
 #edoHistory-pg .wraper .historyList	.listLi .ui-block-c span {
-	/*margin-left: 36%;*/
+	margin-left: 36%;
 	color: #777e81;
 	font-size: 12px;
 }
