--- a/Discover-Bank-Phone/res/values/strings_faq_general.xml
+++ b/Discover-Bank-Phone/res/values/strings_faq_general.xml
@@ -7,20 +7,25 @@
 	    
 	    <item>@string/whats_required_title</item>
 	    <item>@string/whats_required_body</item>
+	    
+	    <item>@string/whats_options</item>
+	    <item>@string/whats_options_body</item>
 	</string-array>
 
 <!-- General FAQ Items -->
-	<string name="is_banking_safe_title">Is Discover.com Mobile Secure?</string>
+	<string name="is_banking_safe_title">Is the Discover Mobile App as secure as Discover.com?</string>
 	<string name="is_banking_safe_body">
-		Discover.com Mobile uses the same security standards as discover.com.  
-		We ensure a high security level by never showing your account number, 
-		timing out each session after a period of inactivity and by using your existing 
-		User ID and Password, which only you know.
+		<![CDATA[The Discover Mobile App uses the same security standards as <a href="com.discover.mobile://www.discover.com">Discover.com</a>.  We ensure a high security level by never showing your account number, timing out each section after a period of inactivity, and by using your existing User ID and Password, which only you know.]]>
 	</string>
 	
 	<string name="whats_required_title">What do I need to log in to Discover Mobile?</string>
 	<string name="whats_required_body">
-		To log in, use the same User ID and Password that you have set up at discoverbank.com.
+		<![CDATA[To log in, you can use the same user ID and password that you have set up at <a href="com.discover.mobile://www.discover.com">Discover.com</a>]]>.
+	</string>
+	
+	<string name="whats_options">What are the options to remember my device for the Enhanced Account Security?</string>
+	<string name="whats_options_body">
+		Choose \"Yes\" if you are using a private device that you will frequently use to access your account.  By doing so, you\'ll still benefit from heightened account security, but will receive fewer security question prompts when logging in.  Choose \"No\" if you are on a public device or if it is a device that you share with others.
 	</string>
 	
 </resources>
