US3626:  Committing for a rebase

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -67,6 +67,7 @@
  	
  	<!-- Edit Payments -->
  	<string name="schedule_pay_save_payment">Save Payment</string>
+ 	<string name="schedule_pay_success_edit">Your payment has been saved successfully.</string>
  	
  	<!-- Cancel Payments -->
  	<string name="are_you_sure_cancel_body">All information you entered for this transaction will be lost. You\'ll need to re-enter the information to complete the transaction.</string>
