US7033 Card Bank Integration - Friday 5-24 merge

--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -30,10 +30,9 @@
                 android:text="@string/account_info_bad_input_error_text" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:id="@+id/account_info_error_label_layout"
-                 >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
 
                 <ImageView
                     android:id="@+id/icon"
@@ -44,9 +43,8 @@
                     android:layout_marginTop="@dimen/forms_inner_padding"
                     android:contentDescription="@string/discover_copyright_text"
                     android:paddingTop="4dp"
-                    android:src="@drawable/error_icon_red" 
-                    android:visibility="gone"
-                    />
+                    android:src="@drawable/error_icon_red"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/account_info_error_label"
@@ -204,8 +202,9 @@
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
-
-            <TextView
+            <!-- Defect id 95853 -->
+            <!--
+                 <TextView
                 android:id="@+id/provide_feedback_button"
                 style="@style/blue_hyperlink_small"
                 android:layout_width="wrap_content"
@@ -218,6 +217,19 @@
                 android:paddingTop="4dp"
                 android:text="@string/feedback_text"
                 android:textSize="14dp" />
+            -->
+
+            <RelativeLayout
+                android:id="@+id/provide_feedback_footer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/footer" >
+
+                <include
+                    android:id="@+id/home_footer"
+                    layout="@layout/card_fragment_footer" />
+            </RelativeLayout>
+            <!-- Defect id 95853 -->
         </RelativeLayout>
     </ScrollView>
 
