--- a/Discover-Card-Phone/res/layout/register_create_credentials.xml
+++ b/Discover-Card-Phone/res/layout/register_create_credentials.xml
@@ -37,8 +37,8 @@
                 style="@style/body_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/account_info_error_label_two_layout"                
-                android:layout_marginBottom="2dp"               
+                android:layout_below="@+id/account_info_error_label_two_layout"
+                android:layout_marginBottom="2dp"
                 android:includeFontPadding="false"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
@@ -54,10 +54,9 @@
                 android:includeFontPadding="false" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" 
                 android:id="@+id/account_info_error_label_two_layout"
-                >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
 
                 <ImageView
                     android:id="@+id/icon"
@@ -68,19 +67,18 @@
                     android:layout_marginTop="@dimen/forms_inner_padding"
                     android:contentDescription="@string/discover_copyright_text"
                     android:paddingTop="4dp"
-                    android:src="@drawable/error_icon_red" 
-                    android:visibility="gone"
-                    />
+                    android:src="@drawable/error_icon_red"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/account_info_error_label_two"
                     style="@style/error_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                   	android:layout_alignTop="@+id/icon"
-        			android:layout_toRightOf="@+id/icon"
+                    android:layout_alignTop="@+id/icon"
                     android:layout_below="@+id/account_info_main_error_label"
                     android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@+id/icon"
                     android:includeFontPadding="false" />
             </RelativeLayout>
 
@@ -353,8 +351,21 @@
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
+            <!-- Defect id 95853 -->
 
-            <TextView
+            <RelativeLayout
+                android:id="@+id/provide_feedback_footer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/footer" >
+
+                <include
+                    android:id="@+id/home_footer"
+                    layout="@layout/card_fragment_footer" />
+            </RelativeLayout>
+
+            <!--
+                 <TextView
                 android:id="@+id/provide_feedback_button"
                 style="@style/blue_hyperlink_small"
                 android:layout_width="wrap_content"
@@ -367,7 +378,9 @@
                 android:paddingTop="4dp"
                 android:text="@string/feedback_text"
                 android:textSize="14dp" />
+            -->
         </RelativeLayout>
+        <!-- Defect id 95853 -->
     </ScrollView>
 
 </LinearLayout>
