--- a/Discover-Card-Phone/res/layout/register_enter_account_info.xml
+++ b/Discover-Card-Phone/res/layout/register_enter_account_info.xml
@@ -86,9 +86,8 @@
                     android:layout_marginTop="@dimen/forms_inner_padding"
                     android:contentDescription="@string/discover_copyright_text"
                     android:paddingTop="4dp"
-                    android:src="@drawable/error_icon_red" 
-                    android:visibility="gone"
-                    />
+                    android:src="@drawable/error_icon_red"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/account_info_error_label"
@@ -250,8 +249,20 @@
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
+            <!-- Defect id 95853 -->
 
-            <TextView
+            <RelativeLayout
+                android:id="@+id/provide_feedback_footer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/footer" >
+
+                <include
+                    android:id="@+id/home_footer"
+                    layout="@layout/card_fragment_footer" />
+            </RelativeLayout>
+            <!--
+                  <TextView
                 android:id="@+id/provide_feedback_button"
                 style="@style/blue_hyperlink_small"
                 android:layout_width="wrap_content"
@@ -264,7 +275,9 @@
                 android:paddingTop="4dp"
                 android:text="@string/feedback_text"
                 android:textSize="14dp" />
+            -->
         </RelativeLayout>
+        <!-- Defect id 95853 -->
     </ScrollView>
 
 </LinearLayout>
