US8573 - TA17731 : TA17732 : TA17733 : TA17734 : TA17737 : TA 17770 - Added delete scheduled bill payments to the scheduled activity view pager. Added the delete modal. Added navigation for when the user deletes a payment, that they are directed back to the scheduled acitivty page with the delete message visble. Update the bank user cache when a payment is deleted.

--- a/Discover-Bank-Phone/res/layout/transaction_detail.xml
+++ b/Discover-Bank-Phone/res/layout/transaction_detail.xml
@@ -141,8 +141,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/content_table"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/groups_of_elements_padding" 
-            android:layout_marginBottom="@dimen/groups_of_elements_padding">
+            android:layout_marginBottom="@dimen/groups_of_elements_padding"
+            android:layout_marginTop="@dimen/groups_of_elements_padding" >
 
             <Button
                 android:id="@+id/delete_one_time_transfer_button"
@@ -166,6 +166,17 @@
                 android:text="@string/see_options"
                 android:visibility="gone" >
             </Button>
+
+            <Button
+                android:id="@+id/delete_button"
+                style="@style/blue_hyperlink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/content_table"
+                android:layout_centerHorizontal="true"
+                android:background="@null"
+                android:text="@string/delete_payment"
+                android:visibility="gone" />
         </RelativeLayout>
 
         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
