--- a/Discover-Launch/assets/www/card/css/referAFriend.css
+++ b/Discover-Launch/assets/www/card/css/referAFriend.css
@@ -56,7 +56,9 @@ color: black;}
 .watermark{left:0 !important;font-size: 15px !important;}
 .raf-page .ui-content-internalpages .view-ref-status{width:100%;display:block;/*text-align:center;*/color:#0267b1;margin-top:20px;font-size:14px;font-weight:600; padding-bottom:10px}
 
-.raf-page .ui-content-internalpages .share-prv{width:100%;display:block !important;text-align:center;color:#1265a7;margin-top:-2%;font-size:13px;font-weight:bold;}
+.raf-page .ui-content-internalpages .share-prv{width:100%;display:block;text-align:center;color:#1265a7;margin-top:-2%;font-size:13px;font-weight:bold;}
+#share-mail-app .share-prv{width:100%;display:none;text-align:center;color:#1265a7;margin-top:-2%;font-size:13px;font-weight:bold;}
+#share-mail-app-prv .share-prv{width:100%;display:block !important;text-align:center;color:#1265a7;margin-top:-2%;font-size:13px;font-weight:bold;}
 .raf-page .ui-content-internalpages .terms-n-condi{width:100%;display:block;text-align:center;color:#1265a7;margin-top:4%;font-size:13px;font-weight:bold;}
 .raf-page .cashback-bonus{display:block;text-align:center;font-size:12px; margin-top:-5px;}
 
